--- a/class5_book.html
+++ b/class5_book.html
@@ -3,36 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* CSS 작성 */
-    </style>
-    <title>책 소개하기</title>
+    <title>데미안 책 소개</title>
 </head>
 <body>
-    <h1>책 제목</h1>
-    <p><b>작가 명: 홍길동</b></p>
+    <h1>데미안</h1>
+    <img src="./assets/images/demian.jpg" width="300" />
+    <p>
+        <b>작가 명: <a href="https://ko.wikipedia.org/wiki/%ED%97%A4%EB%A5%B4%EB%A7%8C_%ED%97%A4%EC%84%B8" target="_blank">헤르만 헤세</a></b>
+    </p>
     <hr>
-    <h3>책 소개</h3>
-    <p>책 소개 내용 적기</p>
+    <h2>책 소개</h2>
+    <section>
+        <p>《데미안》은 헤르만 헤세가 1919년 ‘에밀 싱클레어’라는 가명으로 출판한 소설이다. 당시 문단에서 대문호로 인정받던 헤르만 헤세는 작가로서 자신의 소설이 작품성만으로 인정받는지 확인해보고 싶었고, 그 결과는 성공적이었다. 이후 많은 사람들이 무명작가 ‘에밀 싱클레어’를 궁금해했고, 헤르만 헤세는 자신이 ‘에밀 싱클레어’라는 사실을 밝혔다. 더스토리에서 출간한 초판본 《데미안》은 1919년 헤르만 헤세가 ‘에밀 싱클레어’라는 이름으로 출판한 초판본 표지디자인을 그대로 채택했다. 《데미안》은 헤르만 헤세가 자신의 정체를 밝힌 이후, 1920년 판본부터 저자 이름을 헤르만 헤세로 바꿔서 출판했다.</p>
+
+        <p>▶ 20세기 센세이션을 일으킨 성장 소설의 고전</p>
+
+
+        <p>“시인이 아니면 아무것도 되고 싶지 않다.”<br/>
+        - 헤르만 헤세</p>
+
+        <p>헤르만 헤세의 《데미안》은 1차, 2차 세계 대전 이후 현대 독일 문학에서 ‘전쟁’과 ‘개인’의 관계를 치밀하게 제시한 선구적인 작품이다. 개인주의적이고 철학적인 사유가 관습화되어 있는 독일에서 개인의 내면을 면밀히 탐구하지 않고서는 전쟁이라는 현실을 똑바로 이야기할 수 없다. 《데미안》은 1차 세계대전이 끝난 후 재출발을 다짐한 헤르만 헤세에게 제2의 출발점과 같은 작품으로, 자아 찾기를 삶의 목표로 삼고 내면의 길을 지향하며 현실과 대결하는 영혼의 모습을 치밀하게 그려냈다. 헤세는 치열한 성장 기록인 《데미안》을 통해 세상의 수많은 ‘에밀 싱클레어’들이 자기 탐구를 거쳐 삶의 근원적인 힘을 깨닫기를 바랐다. 그리고 그때 비로소 내면에서 울려 퍼지는 운명의 목소리를 듣게 될 것을 확신했다.</p>
+
+        <h3>[줄거리]</h3>
+
+        <p>라틴어 학교에 다니던 열 살 싱클레어는 따스한 가정에서 자라며 ‘선의 세계’만을 알았다. 그러던 어느 날, 동네 소년 프란츠 크로머에게 사과를 훔쳤다는 허풍을 떨면서 ‘악의 세계’에 대해서도 알게 된다. 그로 인해 자신의 내면에 밝은 세계와 어두운 세계가 공존한다는 것을 느끼고 괴로워한다. 그러던 중 신비한 소년 데미안을 만나고, 그가 들려준 카인과 아벨의 이야기를 통해 선과 악의 진실을 깨닫는다. 상급 학교에 진학하면서 데미안과 헤어진 싱클레어는 다시 어둠의 세계에 빠지게 되는데…….</p>
+    </section>
     <hr>
-    <h3>목차</h3>
-    <i>프롤로그_블라블라</i><br/>
-    <ol>
-        <li><b>목차 1</b>
-            <div>목차1의 내용1</div>
-            <div>목차1의 내용2</div>
-            <div>목차1의 내용3</div>
-        </li>
+    <h2>목차</h2>
+    <i>서문</i><br/>
+    <ul>
+        <li>두세계</li>
+        <li>카인</li>
+        <li>예수 옆에 매달린 도둑</li>
+        <li>베아트리체</li>
+        <li>새는 알에서 나오려고 투쟁한다</li>
+        <li>표적 야곱의 싸움</li>
+        <li>에바 부인</li>
+        <li>종말의 시작</li>
         <br/>
-        <li><b>목차 2</b>
-            <div>목차2의 내용1</div>
-            <div>목차2의 내용2</div>
-            <div>목차2의 내용3</div>
+        <i>작품 해설 | 헤르만 헤세, 자기 성찰의 기록</i>
+        <br/>
+        <i>작가 연보</i>
+    </ul>
+    <hr>
+    <h2>책속으로</h2>
+    <p>
+        많은 사람들이 열한 살도 채 되지 않은 꼬마가 이런 생각을 할 수 있으리라고 믿지 않을 것이다.<br/>
+        사람들에게 내 처지를 이해시키려는 것은 아니다. 그저 인간의 본질을 더 잘 알고 있는 사람에게 이야기하고 싶다.<br/>
+        자신의 감정을 이성으로 변화시키는 걸 익힌 어른들은 꼬마들에게도 이런 이성이 존재할거라 상상하지 못할 뿐만 아니라 꼬마들의 경험도 무시한다.<br/>
+        하지만 나는 평생에서 그때처럼 절박한 경험과 고민을 한 적이 드물다.<br/>
+        _ 〈카인〉 중에서
+        <br/>
+        <br/>
 
-        </li>
-
-    </ol>
-
-
+        바로 그때 나는 커튼이 드리워진 창문 가까이에 데미안이 이상한 모습을 한 채 걸상에 웅크리고 앉아 있는 것을 발견했다.<br/>
+        언젠가 이런 일을 본 적이 있다는 느낌이 번갯불처럼 나를 스쳐 갔다.<br/>
+        그는 두 팔을 아무 움직임도 없이 내려뜨리고 두 손을 무릎 위에 놓은 채 앉아 있었다.<br/>
+        두 눈을 크게 뜬 채 다소 앞으로 숙이고 있는 그의 얼굴은 무감각해 보였고 눈동자에는 조그맣게 빛나는 빛의 반사가<br/>
+        마치 한 조각의 유리처럼 생기 없이 반짝거리고 있었다.<br/>
+        창백한 얼굴은 자기 내면에 깊이 침잠해 있었으며 몸서리쳐지는 마비 상태 이외에 다른 표정이라고는 그 무엇도 찾아볼 수 없었다.<br/>
+        그것은 마치 사원의 현관에 있는 태곳적 짐승의 가면처럼 느껴졌다.<br/>
+        그는 거의 숨도 쉬지 않는 것처럼 보였다.<br/>
+        _ 〈베아트리체〉 중에서
+    </p>
+    <br/>
+    <a href="https://product.kyobobook.co.kr/detail/S000001829920" target="_blank" style="font-size: 32px;">책 구매하기</a>
 </body>
 </html>
