feat: 루트 html 추가

--- a/class5_book.html
+++ b/class5_book.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>데미안</h1>
-    <img src="./assets/images/demian.jpg" width="300" />
+    <img src="./assets/images/demian.jpg" width="300" alt="demain book cover" />
     <p>
         <b>작가 명: <a href="https://ko.wikipedia.org/wiki/%ED%97%A4%EB%A5%B4%EB%A7%8C_%ED%97%A4%EC%84%B8" target="_blank">헤르만 헤세</a></b>
     </p>
