refactor: index.html 리스트 문자 수정

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <ul>
         <li>
             <a href="/class5_book.html">
-                HTML을 활용한 책 소개 페이지
+                HTML 활용하여 책 소개하기
             </a>
         </li>
         <li>
             <a href="/class6_character.html">
-                나만의 캐릭터 소개 페이지
+                캐릭터 사이트 제작하기
             </a>
         </li>
     </ul>
