feat: 마이멜로디 소개 페이지 헤더 추가

--- a/class6_character.html
+++ b/class6_character.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/class6_character.css" type="text/css">
     <title>마이멜로디 캐릭터 소개</title>
 </head>
 <body>
   <header>
-    <img src="" alt="">
+    <div class="header__character__name__group">
+        <div class="header__character__en_name">MY MELODY</div>
+        <div class="header__character__ko_name">마이 멜로디</div>
+    </div>
+    <div class="header__character__group">
+        <img class="header__character__image" src="/assets/images/my_melody.svg" alt="">
+    </div>
   </header>
   <main>
     <section> 소개 및 이미지 </section>
