feat: 캐릭터 소개페이지 기본 구성요소 추가

--- a/class6_character.html
+++ b/class6_character.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/class6_character.css" type="text/css">
-    <title>마이멜로디 캐릭터 소개</title>
+    <title>마이 멜로디 캐릭터 소개</title>
 </head>
 <body>
   <header>
@@ -17,10 +17,93 @@
     </div>
   </header>
   <main>
-    <section> 소개 및 이미지 </section>
-    <section> 성격 리스트 </section>
-    <section> 친구들 목록 </section>
+    <section class="section__character__information">
+        <img class="section__character__image" src="/assets/images/my_melody_introduce.png" alt="마이 멜로디와 마이 스윗 피아노의 사진">
+        <div class="section__character__information__text">
+            <h1>마이 멜로디(My Melody), 1975</h1>
+            <p>
+                마이멜로디는 데뷔 당시 "빨간 모자"동화를 콘셉트로 한 캐릭터로 대중에게 선보였다.<br/>
+                그래서 당시에는 "Little Red Riding Hood"로 불렸다.<br/>
+                이후 인기가 많아지면서 마이멜로디라는 이름이 붙고 분홍색 후드의 모습도 등장했다.<br/>
+                긴 귀와 동그랗고 노란 코가 매력포인트이며, 보통 귀에 꽃이나 리본을 달고 있기도 한다.<br/>
+                <br/>
+                
+                밝고 명랑한 마이멜로디는 남동생인 리듬을 매우 아낀다.<br/>
+                손재주가 좋은 엄마와 함께 베이킹하는 것을 좋아한다.<br/>
+                마이멜로디의 상징과도 같은 두건은 할머니가 손수 만들어준 것으로<br/>
+                마이멜로디가 제일 아끼는 보물이다. 
+            </p>
+        </div>
+    </section>
+    <section class="section__character__profile">
+        <div class="section__character__profile__text">
+            <h1>About Profile</h1>
+            <ul class="section__character__profile__list">
+                <li><b><span class="tag">생일</span></b> : <span>1월 18일</span></li>
+                <li><b><span class="tag">태어난 곳</span></b> : <span>마리랜드에 있는 숲</span></li>
+                <li><b><span class="tag">가족</span></b> : <span>할머니, 할아버지, 엄마, 아빠, 남동생 (리듬)</span></li>
+                <li><b><span class="tag">키</span></b> : <span>숲에 있는 빨갛고 하얀 물방울 모양의 버섯정도</span></li>
+                <li><b><span class="tag">좋아하는 음식</span></b> : <span>아몬드 파운드 케이크</span></li>
+                <li><b><span class="tag">좋아하는 것</span></b> : <span>엄마와 함께 쿠키 굽기</span></li>
+            </ul>
+        </div>
+        <img class="section__character__image" src="/assets/images/my_melody_profile.jpg" alt="">
+    </section>
+    <section class="section__character__family__information">
+        <h1>My Melody Family</h1>
+        <div class="section__character__family__list">
+            <div class="section__character__family__character">
+                <img src="/assets/images/sub-mymelody-father.png" alt="아빠">
+                <span>아빠</span>
+            </div>
+            <div class="section__character__family__character">
+                <img src="/assets/images/sub-mymelody-mother.png" alt="엄마">
+                <span>엄마</span>
+            </div>
+            <div class="section__character__family__character">
+                <img src="/assets/images/sub-mymelody-rhythm.png" alt="리듬">
+                <span>남동생</span>
+            </div>
+            <div class="section__character__family__character">
+                <img src="/assets/images/sub-mymelody-grandpa.png" alt="할아버지">
+                <span>할아버지</span>
+            </div>
+            <div class="section__character__family__character">
+                <img src="/assets/images/sub-mymelody-grandma.png" alt="할머니">
+                <span>할머니</span>
+            </div>
+        </div>
+    </section>
+     <section class="section__character__friend__information">
+        <h1>My Melody Friends</h1>
+        <div class="section__character__friend__list">
+            <div class="section__character__friend__character">
+                <img src="/assets/images/sub-mymelody-father.png" alt="아빠">
+                <span>아빠</span>
+            </div>
+            <div class="section__character__friend__character">
+                <img src="/assets/images/sub-mymelody-mother.png" alt="엄마">
+                <span>엄마</span>
+            </div>
+            <div class="section__character__friend__character">
+                <img src="/assets/images/sub-mymelody-rhythm.png" alt="리듬">
+                <span>남동생</span>
+            </div>
+            <div class="section__character__friend__character">
+                <img src="/assets/images/sub-mymelody-grandpa.png" alt="할아버지">
+                <span>할아버지</span>
+            </div>
+            <div class="section__character__friend__character">
+                <img src="/assets/images/sub-mymelody-grandma.png" alt="할머니">
+                <span>할머니</span>
+            </div>
+        </div>
+    </section>
   </main>
-  <footer> 저작권 및 링크 </footer>
+  <footer>
+    Sanrio Corp. All rights reserved.
+    <br/>
+    This site was created during HYCU Web Design Class <a href="mailto:bmj1012@naver.com">@bbminzzi</a>
+  </footer>
 </body>
 </html>
