feat: 마이멜로디 소개페이지 최종 완성

--- a/class6_character.html
+++ b/class6_character.html
@@ -10,7 +10,7 @@
   <header>
     <div class="header__character__name__group">
         <div class="header__character__en_name">MY MELODY</div>
-        <div class="header__character__ko_name">마이 멜로디</div>
+        <div class="header__character__ko_name">마이 멜로디를 소개합니다♡</div>
     </div>
     <div class="header__character__group">
         <img class="header__character__image" src="/assets/images/my_melody.svg" alt="">
@@ -78,24 +78,20 @@
         <h1>My Melody Friends</h1>
         <div class="section__character__friend__list">
             <div class="section__character__friend__character">
-                <img src="/assets/images/sub-mymelody-father.png" alt="아빠">
-                <span>아빠</span>
+                <img src="/assets/images/sub-mymelody-piano.png" alt="마이 스윗 피아노">
+                <span><a href="https://namu.wiki/w/%EB%A7%88%EC%9D%B4%20%EC%8A%A4%EC%9C%97%20%ED%94%BC%EC%95%84%EB%85%B8" target="_blank">마이 스윗 피아노</a></span>
             </div>
             <div class="section__character__friend__character">
-                <img src="/assets/images/sub-mymelody-mother.png" alt="엄마">
-                <span>엄마</span>
+                <img src="/assets/images/sub-mymelody-flat.png" alt="플랫">
+                <span><a href="https://namu.wiki/w/%ED%94%8C%EB%9E%AB(%EB%B6%80%ED%83%81%ED%95%B4!%20%EB%A7%88%EC%9D%B4%EB%A9%9C%EB%A1%9C%EB%94%94)" target="_blank">플랫</a></span>
             </div>
             <div class="section__character__friend__character">
-                <img src="/assets/images/sub-mymelody-rhythm.png" alt="리듬">
-                <span>남동생</span>
+                <img src="/assets/images/sub-mymelody-kuromi.svg" alt="쿠로미">
+                <span><a href="https://namu.wiki/w/%EC%BF%A0%EB%A1%9C%EB%AF%B8" target="_blank">쿠로미</a></span>
             </div>
             <div class="section__character__friend__character">
-                <img src="/assets/images/sub-mymelody-grandpa.png" alt="할아버지">
-                <span>할아버지</span>
-            </div>
-            <div class="section__character__friend__character">
-                <img src="/assets/images/sub-mymelody-grandma.png" alt="할머니">
-                <span>할머니</span>
+                <img src="/assets/images/sub-mymelody-baku.png" alt="바쿠">
+                <span><a href="https://namu.wiki/w/%EB%B0%94%EC%BF%A0(%EB%B6%80%ED%83%81%ED%95%B4!%20%EB%A7%88%EC%9D%B4%EB%A9%9C%EB%A1%9C%EB%94%94)" target="_blank">바쿠</a></span>
             </div>
         </div>
     </section>
