fix: 경로가 잘못된 부분 수정

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <ul>
         <li>
-            <a href="/class5_book.html">
+            <a href="./class5_book.html">
                 HTML 활용하여 책 소개하기
             </a>
         </li>
         <li>
-            <a href="/class6_character.html">
+            <a href="./class6_character.html">
                 캐릭터 사이트 제작하기
             </a>
         </li>
