fix: alt 빠진 부분 추가

--- a/class6_character.html
+++ b/class6_character.html
@@ -13,7 +13,7 @@
         <div class="header__character__ko_name">마이 멜로디를 소개합니다♡</div>
     </div>
     <div class="header__character__group">
-        <img class="header__character__image" src="./assets/images/my_melody.svg" alt="">
+        <img class="header__character__image" src="./assets/images/my_melody.svg" alt="마이 멜로디 이미지">
     </div>
   </header>
   <main>
@@ -47,7 +47,7 @@
                 <li><b><span class="tag">좋아하는 것</span></b> : <span>엄마와 함께 쿠키 굽기</span></li>
             </ul>
         </div>
-        <img class="section__character__image" src="./assets/images/my_melody_profile.jpg" alt="">
+        <img class="section__character__image" src="./assets/images/my_melody_profile.jpg" alt="마이 멜로디 프로필 이미지">
     </section>
     <section class="section__character__family__information">
         <h1>My Melody Family</h1>
